--- a/4 - Natural Language Processing/assignments and slides/3 - Word embeddings and topic models/Assignment 3 - Word Embeddings.ipynb
+++ b/4 - Natural Language Processing/assignments and slides/3 - Word embeddings and topic models/Assignment 3 - Word Embeddings.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,20 +103,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Anaconda\\lib\\site-packages\\gensim\\utils.py:1197: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n",
-      "  warnings.warn(\"detected Windows; aliasing chunkize to chunkize_serial\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import gensim\n",
     "from gensim.models.keyedvectors import KeyedVectors"
@@ -131,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +148,7 @@
        "3000000"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +177,7 @@
        " ('Tea_Party', 0.4755510687828064)]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +282,7 @@
        "['What', 'Is', 'Your', 'Name', '?']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +900,7 @@
        " (0, 'Convert Google results object (pure js) to Python object')]"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -997,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1107,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1171,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1180,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1244,13 +1235,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "######### TRAINING HAPPENING HERE #############"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1269,7 +1256,7 @@
    },
    "outputs": [],
    "source": [
-    "starspace_embeddings = ######### YOUR CODE HERE #############"
+    "starspace_embeddings = pd.read_csv('data/starspace_embedding')"
    ]
   },
   {
