--- a/4 - Natural Language Processing/assignments and slides/3 - Word embeddings and topic models/Assignment 3 - Word Embeddings.ipynb
+++ b/4 - Natural Language Processing/assignments and slides/3 - Word embeddings and topic models/Assignment 3 - Word Embeddings.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,11 +103,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Anaconda\\lib\\site-packages\\gensim\\utils.py:1197: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n",
+      "  warnings.warn(\"detected Windows; aliasing chunkize to chunkize_serial\")\n"
+     ]
+    }
+   ],
    "source": [
     "import gensim\n",
     "from gensim.models.keyedvectors import KeyedVectors"
@@ -122,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +157,7 @@
        "3000000"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +186,7 @@
        " ('Tea_Party', 0.4755510687828064)]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +291,7 @@
        "['What', 'Is', 'Your', 'Name', '?']"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -830,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +909,7 @@
        " (0, 'Convert Google results object (pure js) to Python object')]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -924,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1067,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1144,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1162,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1171,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1198,7 +1207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Advanced solution: StarSpace embeddings (not completed yet)\n",
+    "# 5. Advanced solution: StarSpace embeddings (skipped)\n",
     "\n",
     "Now you are ready to train your own word embeddings! In particular, you need to train embeddings specially for our task of duplicates detection. Unfortunately, StarSpace cannot be run on Windows and we recommend to use provided\n",
     "[docker container](https://github.com/hse-aml/natural-language-processing/blob/master/Docker-tutorial.md) or other alternatives. Don't delete results of this task because you will need it in the final project.\n",
@@ -1251,41 +1260,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "starspace_embeddings = pd.read_csv('data/starspace_embedding')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "ss_prepared_ranking = []\n",
-    "for line in prepared_validation:\n",
-    "    q, *ex = line\n",
-    "    ranks = rank_candidates(q, ex, starspace_embeddings, 100)\n",
-    "    ss_prepared_ranking.append([r[0] for r in ranks].index(0) + 1)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "for k in [1, 5, 10, 100, 500, 1000]:\n",
-    "    print(\"DCG@%4d: %.3f | Hits@%4d: %.3f\" % (k, dcg_score(ss_prepared_ranking, k), \n",
-    "                                               k, hits_count(ss_prepared_ranking, k)))"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
