--- a/5 - Practical Reinforcement Learning/1 - Introduction to reinforcement learning/Assignment 1 - OpenAI Gym.ipynb
+++ b/5 - Practical Reinforcement Learning/1 - Introduction to reinforcement learning/Assignment 1 - OpenAI Gym.ipynb
@@ -1027,7 +1027,7 @@
    ],
    "source": [
     "from submit import submit_interface\n",
-    "submit_interface(policy, 'sjd1882@gmail.com', 'yK74S7Vej0OPMIBC')"
+    "submit_interface(policy, '<EMAIL>', '<TOKEN>')"
    ]
   }
  ],
@@ -1047,7 +1047,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
