--- a/5 - Practical Reinforcement Learning/Programming Assignments/Programming Assignment 7 - Approximate Q-Learning.ipynb
+++ b/5 - Practical Reinforcement Learning/Programming Assignments/Programming Assignment 7 - Approximate Q-Learning.ipynb
@@ -558,7 +558,7 @@
     }
    ],
    "source": [
-    "submit.submit_cartpole(generate_session, 'sjd1882@gmail.com', '0ip0UIWpExTLCLGh')"
+    "submit.submit_cartpole(generate_session, '<EMAIL>', '<TOKEN>')"
    ]
   }
  ],
@@ -579,7 +579,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
